--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "path": "^0.12.7",
+    "socket.io": "^2.2.0"
   }
 }
